kubernetes/argocd/main-cluster/manifests/registry/registry.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  ingressClassName: traefik
  rules:
    - host: registry.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  name: registry
